# getfileicon

./: Cargo.toml  README.md
src/: api.rs  image.rs  lib.rs  main.rs  prelude.rs  renderer.rs  shell.rs  tests.rs
src/caches/: easy_png_cache.rs  mod.rs  png_cache.rs
src/caches/utils/: mod.rs
