[package]
name = "getfileicon"
version = "0.1.3"
edition = "2021"
authors = ["Grayson Rieger graysonr12@icloud.com"]
license = "MIT"
description = "A Rust library for extracting the pixels of a file icon and saving them as a PNG image."
repository = "https://github.com/graysonrie/getfileicon"

[lib]
name = "getfileicon"
path = "src/lib.rs"

[dependencies]
windows = { version = " 0.58.0", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }
image = "0.24.6"
base64 = "0.22.1"
